# ChangeLog for dev-ruby/ruby2ruby
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby2ruby/ChangeLog,v 1.57 2013/12/19 14:20:24 hattya Exp $

  19 Dec 2013; Akinori Hattori <hattya@gentoo.org> ruby2ruby-1.3.1-r1.ebuild:
  ia64 stable wrt bug #483708

  24 Nov 2013; Agostino Sarubbo <ago@gentoo.org> ruby2ruby-1.3.1-r1.ebuild,
  ruby2ruby-2.0.6.ebuild:
  Stable for sparc, wrt bug #483708

  24 Nov 2013; Agostino Sarubbo <ago@gentoo.org> ruby2ruby-1.3.1-r1.ebuild,
  ruby2ruby-2.0.6.ebuild:
  Stable for ppc64, wrt bug #483708

  24 Nov 2013; Agostino Sarubbo <ago@gentoo.org> ruby2ruby-1.3.1-r1.ebuild,
  ruby2ruby-2.0.6.ebuild:
  Stable for ppc, wrt bug #483708

  24 Nov 2013; Agostino Sarubbo <ago@gentoo.org> ruby2ruby-1.3.1-r1.ebuild,
  ruby2ruby-2.0.6.ebuild:
  Stable for alpha, wrt bug #483708

  15 Sep 2013; Agostino Sarubbo <ago@gentoo.org> ruby2ruby-1.3.1-r1.ebuild,
  ruby2ruby-2.0.6.ebuild:
  Stable for amd64, wrt bug #483708

  15 Sep 2013; Agostino Sarubbo <ago@gentoo.org> ruby2ruby-1.3.1-r1.ebuild,
  ruby2ruby-2.0.6.ebuild:
  Stable for x86, wrt bug #483708

  05 Sep 2013; Jeroen Roovers <jer@gentoo.org> ruby2ruby-1.3.1-r1.ebuild,
  ruby2ruby-2.0.6.ebuild:
  Stable for HPPA (bug #483708).

  05 Sep 2013; Manuel Rüger <mrueg@gentoo.org> -ruby2ruby-1.3.1.ebuild,
  -ruby2ruby-2.0.5.ebuild:
  Cleanup old.

*ruby2ruby-2.0.6 (29 Jul 2013)

  29 Jul 2013; Manuel Rüger <mrueg@gentoo.org> +ruby2ruby-2.0.6.ebuild:
  Version bump

*ruby2ruby-1.3.1-r1 (31 May 2013)

  31 May 2013; Hans de Graaff <graaff@gentoo.org> +ruby2ruby-1.3.1-r1.ebuild,
  ruby2ruby-2.0.5.ebuild:
  Revision bump to avoid file collisions between slots.

*ruby2ruby-2.0.5 (31 May 2013)

  31 May 2013; Hans de Graaff <graaff@gentoo.org> +ruby2ruby-2.0.5.ebuild:
  Version bump.

  15 Jan 2013; Rick Farina <zerochaos@gentoo.org> ruby2ruby-1.2.4-r2.ebuild,
  ruby2ruby-1.3.1.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps
