@@ -11,4 +11,4 @@ RESTRICT=test
 SLOT=2
 SRC_URI=truetype? ( mirror://sourceforge/dejavu/dejavu-sans-ttf-2.34.zip http://unifoundry.com/pub/unifont-6.3.20131217/unifont-6.3.20131217.pcf.gz )
 _eclasses_=autotools	d491cbee372fe390ce066f901abdaaaf	autotools-utils	559ed17194292ec42d68145dcca2fa32	bash-completion-r1	d339dd40b2014cf1edba8592580eef42	eutils	a82a329b538368791f5a6113c60e557e	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	git-r3	f089608c770d9ad72a2c92b547d2b20d	libtool	60a86ca1cbe8068e3d9df0d3004dc520	mount-boot	02dd3bb4c5f025fef0fc3ade0f27c217	multibuild	56d4120419072116417e8de1bd1040ff	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	326c654a30b9c5763247114fc680d5f8	pax-utils	2424f959506320f5196de8f79fa05297	python-any-r1	08d3455b23110d650f173ab0a090818b	python-utils-r1	49ee0ca5e1019d8f256a23692dad2642	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=8076f5643f3f275ce66ac90b2440c2fb
+_md5_=7b979f06b22e76f53ec0ce80879829b8
