@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/grub-9999-r1.ebuild,v 1.7 2013/12/19 03:25:54 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/grub-9999-r1.ebuild,v 1.8 2013/12/19 14:57:24 floppym Exp $
 
 EAPI=5
 
@@ -278,7 +278,7 @@ src_install() {
 	fi
 
 	insinto /etc/default
-	newins "${FILESDIR}"/grub.default-2 grub
+	newins "${FILESDIR}"/grub.default-3 grub
 
 	cd "${ED}" || die
 	pax-mark mpes $(scanelf -BF %F usr/{bin,sbin})
