@@ -1,6 +1,10 @@
 # ChangeLog for sys-boot/grub
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/ChangeLog,v 1.297 2013/12/19 03:25:54 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/ChangeLog,v 1.298 2013/12/19 14:57:24 floppym Exp $
+
+  19 Dec 2013; Mike Gilbert <floppym@gentoo.org> +files/grub.default-3,
+  grub-2.02_beta1.ebuild, grub-9999-r1.ebuild:
+  Adjust default menu options for grub-2.02.
 
 *grub-2.02_beta1 (19 Dec 2013)
 
