@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby2ruby
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby2ruby/ChangeLog,v 1.57 2013/12/19 14:20:24 hattya Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby2ruby/ChangeLog,v 1.58 2013/12/19 14:31:17 hattya Exp $
+
+  19 Dec 2013; Akinori Hattori <hattya@gentoo.org> ruby2ruby-2.0.6.ebuild:
+  ia64 stable wrt bug #483708
 
   19 Dec 2013; Akinori Hattori <hattya@gentoo.org> ruby2ruby-1.3.1-r1.ebuild:
   ia64 stable wrt bug #483708
